# OMOP_Semantics

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
data-model/: index.html
docs/: index.md  registry.md  usage.md  valuesets.md
internals/: index.html
registry/: index.html
schema-and-instances/: index.html
search/: search_index.json
src/notebooks/: enumerator_values.ipynb  examples.ipynb  resolver_engine.ipynb
src/omop_semantics/: __init__.py  api.py  base.py  staging.py  treatment.py  unknowns.py
src/omop_semantics/runtime/: __init__.py  default_valuesets.py  instance_loader.py  registry_manager.py  renderers.py  resolver.py  unknown_handlers.py  utils.py  value_sets.py
src/omop_semantics/schema/: dump.py  pretty.py  registry.py  schema_model.py
src/omop_semantics/schema/configuration/: omop_semantic_core.yaml  omop_staging.yaml
src/omop_semantics/schema/configuration/core/: omop_base.yaml  omop_named_sets.yaml  omop_profiles.yaml  omop_templates.yaml  omop_unknowns.yaml
src/omop_semantics/schema/configuration/profiles/: omop_episodes.yaml  (+2 more)
src/omop_semantics/schema/generated_models/: omop_named_sets.py  omop_semantic_registry.py  template_set.py
src/omop_semantics/schema/instances/: demographic.yaml  document.yaml  enumerators.yaml  genomic.yaml  metadata.yaml  modality.yaml  profile_groups.yaml  profiles.yaml  provider_specialty.yaml  staging.yaml  staging_axis.yaml  treatment_episode.yaml  treatment_intent.yaml  unknown.yaml  valuesets.yaml
src/omop_semantics/utils/: __init__.py  instance_manager.py  load.py  paths.py
usage/: index.html
valuesets/: index.html
(+7 files in other folders)
