[project]
name = "omop-semantics"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gkennos", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "linkml>=1.9.6",
    "linkml-runtime>=1.9.5",
    "python-dotenv>=1.2.1",
    "ruamel-yaml>=0.18.17",
    "typing-extensions>=4.15.0",
]

[project.scripts]
omop-semantics = "omop_semantics:main"

[project.optional-dependencies]
dev = [
  "ipython>=8.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.8",
  "ruff>=0.4",
  "rich>=13.0",
]
docs = [
  "mkdocs-material>=9.7.1",
  "mkdocstrings-python>=2.0.1",
  "mkdocs>=1.6.1",
  "mkdocs-mermaid2-plugin"
]
[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://australiancancerdatanetwork.github.io/OMOP_Semantics/"
Repository = "https://github.com/AustralianCancerDataNetwork/OMOP_Semantics"
Issues = "https://github.com/AustralianCancerDataNetwork/OMOP_Semantics/issues"
